refactor: major project restructuring and cleanup
- Add IDE configuration standards for Kiro IDE
- Reorganize test directories (staging-tests -> e2e-tests)
- Move Docker compose files to deployment/docker/
- Add comprehensive project analysis documents
- Clean up unused scripts and reports
- Add .editorconfig for consistent code formatting
- Update build configurations and dependencies
- Improve documentation structure and quality
- Add SonarQube configuration